# UNIStream

./: CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
easydk/: CMakeLists.txt  CPPLINT.cfg  edk_config.h.in  mps_config.h.in
easydk/cmake/: FindAX.cmake  FindFFmpeg.cmake  FindGlog.cmake
easydk/include/: uniedk_buf_surface.h  uniedk_buf_surface_util.hpp  uniedk_decode.h  uniedk_encode.h  uniedk_osd.h  uniedk_platform.h  uniedk_transform.h  uniedk_vin_capture.h  uniedk_vout_display.h
easydk/include/infer_server/uniis/: infer_server.h  processor.h  shape.h
easydk/python/: CMakeLists.txt  setup.py
easydk/python/samples/: sample_common.cpp  sample_utils.py  uniis_async_demo.py  uniis_infer_only_demo.py  uniis_sync_demo.py
easydk/python/src/: common_wrapper.cpp  common_wrapper.hpp  data_py_wrapper.cpp  infer_server_py_wrapper.cpp  model_py_wrapper.cpp  observer_py_wrapper.cpp  platform_py_wrapper.cpp  processor_py_wrapper.cpp  processor_py_wrapper.hpp  session_py_wrapper.cpp  shape_py_wrapper.cpp  uniis_py_wrapper.cpp
easydk/python/test/: data_test.py  infer_server_test.py  model_test.py  observer_test.py  process_test.py  session_test.py  shape_test.py  test_cpptest_wrapper.cpp  test_process_cpptest_wrapper.cpp  utils.py
easydk/samples/easy_pipeline/: CMakeLists.txt  run_yolov11.sh  run_yolov7_face.sh  run_yolov8.sh  stream_app.cpp
easydk/samples/simple_demo/: CMakeLists.txt
easydk/src/: uniedk_buf_surface.cpp  uniedk_buf_surface_impl.cpp  uniedk_buf_surface_impl.h  uniedk_buf_surface_impl_device.cpp  uniedk_buf_surface_impl_device.h  uniedk_buf_surface_impl_system.cpp  uniedk_buf_surface_impl_system.h  uniedk_buf_surface_impl_unified.cpp  uniedk_buf_surface_impl_unified.h  uniedk_buf_surface_impl_vb.cpp  uniedk_buf_surface_impl_vb.h  uniedk_buf_surface_util.cpp  uniedk_buf_surface_utils.cpp  uniedk_buf_surface_utils.h  uniedk_decode.cpp  uniedk_decode_impl.hpp  uniedk_encode.cpp  uniedk_encode_impl.hpp  uniedk_osd.cpp  uniedk_platform.cpp  uniedk_transform.cpp  uniedk_transform_impl.hpp
easydk/src/ax650/: ax650_helper.cpp  ax650_helper.hpp  uniedk_decode_impl_ax650.cpp  uniedk_decode_impl_ax650.hpp  uniedk_encode_impl_ax650.cpp  uniedk_encode_impl_ax650.hpp  uniedk_transform_impl_ax650.cpp  uniedk_transform_impl_ax650.hpp
easydk/src/common/: utils.cpp  utils.hpp
easydk/src/transform/: uniedk_transform.cpp  uniedk_transform.hpp
easydk/unitest/: CMakeLists.txt
easydk/unitest/src/: main.cpp  test_base.cpp  test_base.h  test_decode.cpp  test_encode.cpp  test_platform.cpp
easydk/unitest/util/: ffmpeg_demuxer.h
framework/: CMakeLists.txt
framework/include/: unistream_collection.hpp  unistream_common.hpp  unistream_config.hpp  unistream_core.hpp  unistream_eventbus.hpp  unistream_frame.hpp  unistream_logging.hpp  unistream_module.hpp  unistream_pipeline.hpp  unistream_source.hpp  unistream_version.hpp
framework/include/private/: unistream_allocator.hpp  unistream_common_pri.hpp  unistream_module_pri.hpp  unistream_param.hpp
framework/include/profiler/: module_profiler.hpp  pipeline_profiler.hpp  pipeline_tracer.hpp  process_profiler.hpp  profile.hpp  stream_profiler.hpp  trace.hpp  trace_serialize_helper.hpp
framework/include/util/: unistream_any.hpp  unistream_queue.hpp  unistream_rwlock.hpp  unistream_timer.hpp
framework/src/: connector.cpp  connector.hpp  conveyor.cpp  conveyor.hpp  unistream_allocator.cpp  unistream_collection.cpp  unistream_config.cpp  unistream_eventbus.cpp  unistream_frame.cpp  unistream_graph.cpp  unistream_graph.hpp  unistream_module.cpp  unistream_pipeline.cpp  unistream_source.cpp  unistream_version.cpp
framework/src/profiler/: circular_buffer.hpp  module_profiler.cpp  pipeline_profiler.cpp  pipeline_tracer.cpp  process_profiler.cpp  stream_profiler.cpp  trace_serialize_helper.cpp
framework/unitest/: CMakeLists.txt  main.cpp  test_collection.cpp  test_config.cpp  test_connector.cpp  test_conveyor.cpp  test_eventbus.cpp  test_graph.cpp  test_module.cpp  test_module_profiler.cpp  test_param.cpp  test_pipeline.cpp  test_pipeline_data_flow.cpp  test_pipeline_profiler.cpp  test_pipeline_tracer.cpp  test_process_profiler.cpp  test_stream_profiler.cpp  test_threadsafe_queue.cpp  test_time_utility.cpp  test_trace_serialize_helper.cpp  test_universion.cpp
framework/unitest/common/: test_base.cpp  test_base.hpp
modules/unitest/: CMakeLists.txt  test_base.cpp  test_frame.cpp  test_main.cpp
modules/unitest/encode/: test_encode.cpp
modules/unitest/include/: test_base.hpp
modules/unitest/inference/: test_infer_params.cpp  test_inference.cpp
modules/unitest/osd/: test_osd.cpp
modules/unitest/source/: test_fr_controller.cpp  test_handler.cpp  test_source.cpp
modules/unitest/track/: test_track.cpp
modules_contrib/: CMakeLists.txt
modules_contrib/fakesink/include/: fakesink.hpp
modules_contrib/fakesink/src/: fakesink.cpp
modules_contrib/selector/include/: selector.hpp  strategy.hpp
modules_contrib/selector/src/: selector.cpp  strategy.cpp
python/: CMakeLists.txt  README.md  setup.py
python/samples/: README.md  observer.py  python_demo_config.json  pyunistream_demo.py  utils.py  yolov5_detection_config.json  yolov5_detector.py
python/src/: common_wrapper.cpp  common_wrapper.hpp  data_source_py_wrapper.cpp  pymodule.h  pypostproc.h  pypreproc.h  unistream_config_py_wrapper.cpp  unistream_frame_py_wrapper.cpp  unistream_frame_va_py_wrapper.cpp  unistream_module_py_wrapper.cpp  unistream_pipeline_py_wrapper.cpp  unistream_postproc_py_wrapper.cpp  unistream_preproc_py_wrapper.cpp  unistream_profile_py_wrapper.cpp  unistream_py_wrapper.cpp  unistream_source_module_py_wrapper.cpp
python/test/: __init__.py  config_test.py  cpp_call_py_testfunc.cpp  cpp_data_handler_test.cpp  cpp_frame_test.cpp  cpp_frame_va_test.cpp  cpp_postproc_test.cpp  cpp_preproc_test.cpp  data_handler_test.py  frame_test.py  frame_va_test.py  module_test.py  pipeline_test.py  postproc_test.py  preproc_test.py  run_pytest.sh  source_module_test.py
samples/test_run_pipeline/: CMakeLists.txt  config.json  run.sh  test_run_pipeline.cpp
(+283 files in other folders)
